--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .stack-work/stack.sqlite3
+.stack-work/
 .stack-work/stack.sqlite3.pantry-write-lock
 .stack-work/dist/x86_64-linux-tinfo6/Cabal-3.2.1.0/build-lock
 .stack-work/dist/x86_64-linux-tinfo6/Cabal-3.2.1.0/setup-config
