finish the 24 solved games

--- a/rosetta.cabal
+++ b/rosetta.cabal
@@ -39,4 +39,5 @@ Executable rosetta
                  , TwoZeroFourEightGame
                  , TwentityGame
                  , TwentityFour
+                 , TwentitySolveGame
                  
