finish teh 4 -rings _or 4 squares puzzle

--- a/rosetta.cabal
+++ b/rosetta.cabal
@@ -40,4 +40,5 @@ Executable rosetta
                  , TwentityGame
                  , TwentityFour
                  , TwentitySolveGame
+                 , FourRingsSquaresPuzzle
                  
