added Abbreviation simple

--- a/rosetta.cabal
+++ b/rosetta.cabal
@@ -48,4 +48,6 @@ Executable rosetta
                  , NineNineBottleOfBeer
                  , ASearchAlgorithm
                  , Abbreviation
+                 , AbbreviationEasy
+                 , AbbreviationSimple
                  
