--- a/rosetta.cabal
+++ b/rosetta.cabal
@@ -50,4 +50,5 @@ Executable rosetta
                  , Abbreviation
                  , AbbreviationEasy
                  , AbbreviationSimple
+                 , ABCProblem
                  
