--- a/rosetta.cabal
+++ b/rosetta.cabal
@@ -52,4 +52,5 @@ Executable rosetta
                  , AbbreviationSimple
                  , ABCProblem
                  , ABCWords
+                 , Abelian
                  
