added Chains and Additive Primes

--- a/rosetta.cabal
+++ b/rosetta.cabal
@@ -58,4 +58,7 @@ Executable rosetta
                  , Accumulator
                  , Ackermann
                  , ActiveObject
+                 , AdditionChains
+                 , AdditionChainsExponentiation
+                 , AdditivePrimes
                  
