add second time align columns

--- a/rosetta.cabal
+++ b/rosetta.cabal
@@ -63,4 +63,5 @@ Executable rosetta
                  , AdditivePrimes
                  , ASKPrimes
                  , AlgebraicData
+                 , AlignColumns
                  
