added Angle BetweenTwoBear

--- a/rosetta.cabal
+++ b/rosetta.cabal
@@ -70,4 +70,6 @@ Executable rosetta
                  , AlmostPrimes
                  , AmicablePairs
                  , Anagrams
+                 , DerangedAnagrams
+                 , AngleBetweenTwoBear
                  
