--- a/rosetta.cabal
+++ b/rosetta.cabal
@@ -72,4 +72,5 @@ Executable rosetta
                  , Anagrams
                  , DerangedAnagrams
                  , AngleBetweenTwoBear
+                 , AnglesGeomoetric
                  
