--- a/rosetta.cabal
+++ b/rosetta.cabal
@@ -29,6 +29,7 @@ Executable rosetta
                  , containers
                  , time
                  , numbers
+                 , gloss
                --  , diagrams==1.4.0.1
    Hs-source-dirs: src
    Ghc-options:    -O2 -funbox-strict-fields -optc-O2
@@ -73,4 +74,5 @@ Executable rosetta
                  , DerangedAnagrams
                  , AngleBetweenTwoBear
                  , AnglesGeomoetric
+                 , AnimatePendulum
                  
