--- a/rosetta.cabal
+++ b/rosetta.cabal
@@ -75,4 +75,5 @@ Executable rosetta
                  , AngleBetweenTwoBear
                  , AnglesGeomoetric
                  , AnimatePendulum
+                 , AntiPrimes
                  
