--- a/rosetta.cabal
+++ b/rosetta.cabal
@@ -76,4 +76,5 @@ Executable rosetta
                  , AnglesGeomoetric
                  , AnimatePendulum
                  , AntiPrimes
+                 , AVLTree
                  
