added the ArchimedeanSpiral

--- a/rosetta.cabal
+++ b/rosetta.cabal
@@ -77,4 +77,5 @@ Executable rosetta
                  , AnimatePendulum
                  , AntiPrimes
                  , AVLTree
+                 , ArchimedeanSpiral
                  
