--- a/rosetta.cabal
+++ b/rosetta.cabal
@@ -30,6 +30,7 @@ Executable rosetta
                  , time
                  , numbers
                  , gloss
+                 , parsec
                --  , diagrams==1.4.0.1
    Hs-source-dirs: src
    Ghc-options:    -O2 -funbox-strict-fields -optc-O2
@@ -78,4 +79,5 @@ Executable rosetta
                  , AntiPrimes
                  , AVLTree
                  , ArchimedeanSpiral
+                 , ArithmeticEvaluation
                  
