--- a/rosetta.cabal
+++ b/rosetta.cabal
@@ -80,4 +80,5 @@ Executable rosetta
                  , AVLTree
                  , ArchimedeanSpiral
                  , ArithmeticEvaluation
+                 , AsciiDiagram
                  
