add Pythagorean and mode average

--- a/rosetta.cabal
+++ b/rosetta.cabal
@@ -84,4 +84,6 @@ Executable rosetta
                   , AtomicUpdates
                   , AverageLoopLength
                   , AverageMedian
+                  , AveragesMode
+                  , PythagoreanMean
                  
