--- a/rosetta.cabal
+++ b/rosetta.cabal
@@ -86,4 +86,5 @@ Executable rosetta
                   , AverageMedian
                   , AveragesMode
                   , PythagoreanMean
+                  , SimpleMovingAverage
                  
