--- a/rosetta.cabal
+++ b/rosetta.cabal
@@ -31,6 +31,7 @@ Executable rosetta
                  , numbers
                  , gloss
                  , parsec
+                 , split
                --  , diagrams==1.4.0.1
    Hs-source-dirs: src
    Ghc-options:    -O2 -funbox-strict-fields -optc-O2
