--- a/rosetta.cabal
+++ b/rosetta.cabal
@@ -33,7 +33,7 @@ Executable rosetta
                  , parsec
                  , split
                  , vector
-               --  , diagrams==1.4.0.1
+                 , diagrams==1.4.0.1
    Hs-source-dirs: src
    Ghc-options:    -O2 -funbox-strict-fields -optc-O2
    Extensions:     BangPatterns
@@ -92,4 +92,5 @@ Executable rosetta
                   ,BClass.BaconCipher
                   ,BClass.BalanceBrackets
                   ,BClass.BalancedTenary
+                  ,BClass.BarnsleyFern
                  
